# fastapi-sqlmodel-rent

./: .env  database.db  pyproject.toml
rentapp/: main.py  rentapp.py  rentdetails.py  settings.py
